# c-nake

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
core/: CMakeLists.txt
core/src/: tmp.c  tmp.h
core/src/game/: game.c  game.h
core/src/grid/: grid.c  grid.h
core/src/snake/: snake.c  snake.h
core/src/tile/: tile.c  tile.h
core/src/utils/: mersenne-twister.c  mersenne-twister.h  safe-memory.c  safe-memory.h
core/test/: CMakeLists.txt
core/test/src/: main.tests.c  tmp.tests.c  tmp.tests.h
core/test/src/game/: game.tests.c  game.tests.h
core/test/src/grid/: grid.tests.c  grid.tests.h
core/test/src/snake/: snake.tests.c  snake.tests.h
core/test/src/tile/: tile.tests.c  tile.tests.h
ui/: CMakeLists.txt
ui/src/: config.h  main.c  widget.c
ui/src/widget/game-widget/: game-widget.c  game-widget.h
ui/src/widget/grid-widget/: grid-widget.c  grid-widget.h
ui/src/widget/snake-widget/: snake-widget.c  snake-widget.h
ui/src/widget/tile-widget/: tile-widget.c  tile-widget.h
